--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "anagram",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://connorholyday.github.io/anagram-helper",
   "devDependencies": {
     "react-scripts": "0.8.5"
   },
